minor fix to align resume h3

--- a/app/client/main.css
+++ b/app/client/main.css
@@ -403,6 +403,7 @@ body {
 	left: 0;
 	right: 0;
 	visibility: hidden;
+	margin: 0;
 }
 
 .resume-overlay:hover h3 {
